--- a/event/Makefile
+++ b/event/Makefile
@@ -1,54 +1,43 @@
 CONTAINER=event
+
 DC=docker compose -p ticket-system -f ./.docker/docker-compose.yml
+DC_DEBUG = docker compose -p ticket-system -f ./.docker/docker-compose.yml -f ./.docker/docker-compose.dev.yml
+
 EXEC=$(DC) exec $(CONTAINER)
-CURDIR=$(shell pwd)
-BINDIR=${CURDIR}/bin
-GOVER=$(shell go version | perl -nle '/(go\d\S+)/; print $$1;')
-LINTVER=v1.60.2
-LINTBIN=${BINDIR}/lint_${GOVER}_${LINTVER}
-SERVER=ticket-system/event/cmd/server
-MIGRATE=ticket-system/event/cmd/migrate
+BINDIR=$(shell pwd)/bin
 
-.PHONY: all
+.PHONY: build
 
-all: build test lint
+up: env
+	${DC} up -d
 
-build: bindir
-	env GOOS=linux GOARCH=amd64 go build -o ${BINDIR}/app ${SERVER} && \
-	env GOOS=linux GOARCH=amd64 go build -o ${BINDIR}/migrate ${MIGRATE}
+up-debug: env
+	${DC_DEBUG} up -d
+
+build: env generate-proto
+	${DC} build
+
+build-debug: env generate-proto
+	${DC_DEBUG} build
 
 migrate:
-	${EXEC} cmd/migrate
+	${EXEC} migrate
 
-test:
-	go test ./...
+### helpers
 
-run:
-	${EXEC} cmd/app
-
-lint: install-lint
-	${LINTBIN} run
-
-install-lint: bindir
-	test -f ${LINTBIN} || \
-		(GOBIN=${BINDIR} go install github.com/golangci/golangci-lint/cmd/golangci-lint@${LINTVER} && \
-		mv ${BINDIR}/golangci-lint ${LINTBIN})
-
-precommit: build test lint
-	echo "OK"
+env:
+	if [ ! -f .docker/.env ]; then \
+		cp .docker/.env.dist .docker/.env; \
+	fi
 
 bindir:
-	mkdir -p ${BINDIR}
+	test -d ${BINDIR} || mkdir -p ${BINDIR}
 
-install-go-deps:
-	GOBIN=$(BINDIR) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1
-	GOBIN=$(BINDIR) go install -mod=mod google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
+install-protoc: bindir
+	test -f $(BINDIR)/protoc-gen-go || GOBIN=$(BINDIR) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1
+	test -f $(BINDIR)/protoc-gen-go-grpc || GOBIN=$(BINDIR) go install -mod=mod google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
 
-get-go-deps:
-	go get -u google.golang.org/protobuf/cmd/protoc-gen-go
-	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
-
-vendor-proto:
+install-vendor-proto:
 	mkdir -p vendor-proto
 	@if [ ! -d vendor-proto/google ]; then \
 		git clone https://github.com/googleapis/googleapis vendor-proto/googleapis &&\
@@ -63,7 +52,7 @@ vendor-proto:
 		rm -rf vendor-proto/protobuf ;\
 	fi
 
-generate:
+generate-proto: install-protoc install-vendor-proto
 	mkdir -p pkg/v1
 	protoc -I api/v1 -I vendor-proto \
 		--go_out=pkg/v1 --go_opt=paths=source_relative \
