fix checkout methods

--- a/checkout/.env.dist
+++ b/checkout/.env.dist
@@ -11,4 +11,4 @@ EXPOSE_SERVER_PORT=50620
 EXPOSE_DB_PORT=50621
 EXPOSE_DEBUG_PORT=50622
 BOOKING_SERVER=booking:50610
-EVENT_SERVER=booking:50600
+EVENT_SERVER=event:50600
