add pushing orders to kafka

--- a/checkout/.env.dist
+++ b/checkout/.env.dist
@@ -12,3 +12,7 @@ EXPOSE_DB_PORT=50621
 EXPOSE_DEBUG_PORT=50622
 BOOKING_SERVER=booking:50610
 EVENT_SERVER=event:50600
+### kafka
+TOPIC_ORDER=order
+BROKER_1=kafka-broker-1:19091
+BROKER_2=kafka-broker-2:19092
