add notification service and consume order messages

--- a/.env.dist
+++ b/.env.dist
@@ -6,3 +6,5 @@ BROKER_1_INT_PORT=19091
 BROKER_1_OUT_PORT=9091
 BROKER_2_INT_PORT=19092
 BROKER_2_OUT_PORT=9092
+BROKER_3_INT_PORT=19093
+BROKER_3_OUT_PORT=9093
