--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -43,3 +43,19 @@ services:
       - KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
     networks:
       - ticket-system
+
+  kafka-broker-3:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "${BROKER_3_OUT_PORT}:${BROKER_3_OUT_PORT}"
+    depends_on:
+      - zookeeper
+    environment:
+      - KAFKA_BROKER_ID=3
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:${ZOOKEEPER_PORT}
+      - KAFKA_LISTENERS=INTERNAL://kafka-broker-3:${BROKER_3_INT_PORT},OUTSIDE://0.0.0.0:${BROKER_3_OUT_PORT}
+      - KAFKA_ADVERTISED_LISTENERS=INTERNAL://kafka-broker-3:${BROKER_3_INT_PORT},OUTSIDE://localhost:${BROKER_3_OUT_PORT}
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      - KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
+    networks:
+      - ticket-system
