--- a/checkout/.docker/Dockerfile.dev.multistage
+++ b/checkout/.docker/Dockerfile.dev.multistage
@@ -16,6 +16,7 @@ COPY ./booking/go.mod ../booking/
 COPY ./booking/pkg ../booking/pkg/
 COPY ./event/go.mod ../event/
 COPY ./event/pkg ../event/pkg/
+COPY ./notification/go.mod ../notification/
 
 RUN --mount=type=cache,target=/gomod-cache  \
     go mod download
