--- a/checkout/.env.dist
+++ b/checkout/.env.dist
@@ -14,5 +14,8 @@ BOOKING_SERVER=booking:50610
 EVENT_SERVER=event:50600
 ### kafka
 TOPIC_ORDER=order
+TOPIC_ORDER_PARTITIONS=10
+TOPIC_ORDER_REPLICATION_FACTOR=3
 BROKER_1=kafka-broker-1:19091
 BROKER_2=kafka-broker-2:19092
+BROKER_3=kafka-broker-2:19093
